# python-fastapi-example

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README  README.md  alembic.ini  bandit.yaml  config.py  conftest.py  database_manager.py  docker-compose.yml  main.py  pyproject.toml  test_db.py
api/: __init__.py
api/v1/: __init__.py  test_user.py  user.py  user_routes.py
api/v1/users/: __init__.py  handlers.py
auth/: __init__.py  config.py  conftest.py  dependencies.py  login.py  models.py  password.py  redis.py  routes.py  service.py  test_login.py  token.py
config/: logging.py  settings.py
database/: __init__.py  config.py  model.py  schema.sql
database/migrations/: env.py
database/migrations/versions/: 02d0bdd68632_update_user_model_case_insensitive_index.py  20250117_2016_eeb64b7d078e_fix_book_model_detection.py  20250117_2311_6f33046467fb_initial.py  864e61d97e73_initial_migration.py  initial_migration.py  update_books_timestamp.py
database/models/: __init__.py  base.py  mixins.py  user.py
database/models/example/: __init__.py  books.py  test_books.py
example/: README.md  __init__.py  books.py  echo.py  endpoints.py  error.py  hello.py  ping.py  test_books.py  test_echo.py  test_error.py  test_hello.py  test_ping.py
main/: __init__.py  app.py
migrations/: 20241104041727_create_users_table.sql
monitoring/: README.md  __init__.py  crash_reporter.py
src/: lib.rs  main.rs
src/auth/: mod.rs
src/ping/: mod.rs
src/state/: mod.rs
src/user/: mod.rs
tools/: adduser.py
user/: __init__.py  model.py  operations.py  schemas.py  test_user.py
v1/: __init__.py
v1/users/: models.py  operations.py  router.py  schemas.py  test_user.py
