[package]
name = "bss-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
axum = "*"
serde_json = "*"
serde = { version = "1.0.214", features = ["derive"] }
jsonwebtoken = "*"
chrono = "*"
tower-http = { version = "*", features = ["cors"] }
thiserror = "1.0.65"
sqlx = { version = "*", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }
uuid = { version = "1.11.0", features = ["v4"] }
validator = { version = "*", features = ["derive"]}
regex = "*"
